--- a/Data_Representation_Clustering_Diplav.ipynb
+++ b/Data_Representation_Clustering_Diplav.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "b46c4caf",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "1dea2976",
    "metadata": {},
    "outputs": [],
@@ -1793,7 +1793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "25621b15",
    "metadata": {},
    "outputs": [],
@@ -1945,7 +1945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "83063b19",
    "metadata": {},
    "outputs": [
@@ -1971,7 +1971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 18,
    "id": "c871d1d5",
    "metadata": {},
    "outputs": [],
@@ -2061,7 +2061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "468353fb",
    "metadata": {},
    "outputs": [],
@@ -2096,7 +2096,7 @@
     "    else:\n",
     "        for components in n_components:\n",
     "            features = red_DICT[reduction][components]\n",
-    "            for k in clusters:\n",
+    "            for k in clusters_Agglo:\n",
     "                Agglo_Clustering = AgglomerativeClustering(n_clusters=k, linkage='ward').fit(features)\n",
     "                predicted_Labels = Agglo_Clustering.labels_\n",
     "                curr_scores = getScores(labels, predicted_Labels)\n",
@@ -2112,10 +2112,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "a8b5d4e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best Agglomerative Scores:  {'Homogeneity': 0.5592790855076187, 'Completeness': 0.5940080370036646, 'V_measure': 0.5761206645508782, 'AdjustedRandIndex': 0.4270833817429984, 'Adjusted_mutual_information_score': 0.5746985808250807}\n",
+      "Best Number of Clusters:  20\n",
+      "Best Reduction Method:  UMAP\n",
+      "Best Components for the reduction method:  5\n",
+      "Best Agglomerative Clusterer:  AgglomerativeClustering(n_clusters=20)\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Best Agglomerative Scores: \" , best_Agglo_Scores)\n",
     "print(\"Best Number of Clusters: \", best_k_Agglo)\n",
@@ -2126,7 +2138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "5d303a29",
    "metadata": {},
    "outputs": [],
@@ -2152,7 +2164,7 @@
     "            \n",
     "            HDBS = hdbscan.HDBSCAN(cluster_selection_epsilon=0.5, min_cluster_size=k, min_samples=100)\n",
     "            HDBS.fit(features)\n",
-    "            predicted_Labels = HDB.labels_\n",
+    "            predicted_Labels = HDBS.labels_\n",
     "            curr_scores = getScores(labels, predicted_Labels)\n",
     "\n",
     "            if curr_scores['AdjustedRandIndex'] > best_ARI_HDBS:\n",
@@ -2166,10 +2178,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "41591090",
+   "execution_count": 21,
+   "id": "581b89b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best HDBSCAN Scores:  {'Homogeneity': 0.43227904314177473, 'Completeness': 0.6385902396914952, 'V_measure': 0.5155609226985286, 'AdjustedRandIndex': 0.22472241227952833, 'Adjusted_mutual_information_score': 0.5145797829160398}\n",
+      "Best min clusters:  200\n",
+      "Best Reduction Method:  UMAP\n",
+      "Best Components for the reduction method:  5\n",
+      "Best HDBSCAN:  HDBSCAN(cluster_selection_epsilon=0.5, min_cluster_size=200, min_samples=100)\n"
+     ]
+    }
+   ],
    "source": [
     "print(\"Best HDBSCAN Scores: \" , best_HDBS_Scores)\n",
     "print(\"Best min clusters: \", best_k_HDBS)\n",
@@ -2180,7 +2204,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26926c8c",
+   "id": "2806f7c6",
    "metadata": {},
    "source": [
     "### Q18"
@@ -2188,7 +2212,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0b361bc3",
+   "id": "067eae88",
    "metadata": {},
    "source": [
     "#### Approach 1"
@@ -2196,10 +2220,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ab621007",
+   "execution_count": 24,
+   "id": "569896b7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/diplavsrivastava/opt/anaconda3/lib/python3.8/site-packages/sklearn/decomposition/_nmf.py:1090: ConvergenceWarning: Maximum number of iterations 200 reached. Increase it to improve convergence.\n",
+      "  warnings.warn(\"Maximum number of iterations %d reached. Increase it to\"\n"
+     ]
+    }
+   ],
    "source": [
     "umap_mod = umap.UMAP(n_components=50)\n",
     "UMAP_features = umap_mod.fit_transform(tfidf_features)\n",
@@ -2218,17 +2251,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4c1f193c",
+   "execution_count": 25,
+   "id": "f5c319f4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Homogeneity': 0.26263694661814285,\n",
+       " 'Completeness': 0.3390506603315467,\n",
+       " 'V_measure': 0.29599157153917666,\n",
+       " 'AdjustedRandIndex': 0.05462479382843152,\n",
+       " 'Adjusted_mutual_information_score': 0.29341090858213137}"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "getScores(labels, clusters_Labels)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a195fa5e",
+   "id": "72558396",
    "metadata": {},
    "source": [
     "#### Approach 2"
@@ -2236,8 +2284,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "37c80844",
+   "execution_count": 26,
+   "id": "c754ae26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2251,8 +2299,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "fd16520a",
+   "execution_count": 27,
+   "id": "41ed10ba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2266,8 +2314,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "61d0b13d",
+   "execution_count": 28,
+   "id": "9cf8af0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2281,8 +2329,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "18b09eab",
+   "execution_count": 29,
+   "id": "ddbfaf5c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2301,10 +2349,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4e513826",
+   "execution_count": 30,
+   "id": "26fc7100",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Homogeneity': 0.5377330454432618,\n",
+       " 'Completeness': 0.5701005510124901,\n",
+       " 'V_measure': 0.553443958525178,\n",
+       " 'AdjustedRandIndex': 0.43210015033519894,\n",
+       " 'Adjusted_mutual_information_score': 0.5519450599961752}"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "clusterer = KMeans(n_clusters=20, random_state=0, max_iter=5000, n_init=50).fit(UMAPFeat3)\n",
     "clustLabs = clusterer.labels_\n",
@@ -2313,10 +2376,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a35908d0",
+   "execution_count": 31,
+   "id": "55f8535c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Homogeneity': 0.3180156339085947,\n",
+       " 'Completeness': 0.40555968040622326,\n",
+       " 'V_measure': 0.3564917605689272,\n",
+       " 'AdjustedRandIndex': 0.10504304304624516,\n",
+       " 'Adjusted_mutual_information_score': 0.354134206043779}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "clusterer = KMeans(n_clusters=20, random_state=0, max_iter=5000, n_init=50).fit(svdFeat3)\n",
     "clustLabs = clusterer.labels_\n",
@@ -2325,10 +2403,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f0fbd94b",
+   "execution_count": 32,
+   "id": "45c129a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Homogeneity': 0.5325344228011074,\n",
+       " 'Completeness': 0.5512554917732764,\n",
+       " 'V_measure': 0.541733266161104,\n",
+       " 'AdjustedRandIndex': 0.4347861276578972,\n",
+       " 'Adjusted_mutual_information_score': 0.5402261154056546}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "clusterer = KMeans(n_clusters=20, random_state=0, max_iter=5000, n_init=50).fit(UMAPFeat5)\n",
     "clustLabs = clusterer.labels_\n",
@@ -2337,10 +2430,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "648a07e7",
+   "execution_count": 33,
+   "id": "feaa535d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Homogeneity': 0.35316781749278253,\n",
+       " 'Completeness': 0.44197398029529644,\n",
+       " 'V_measure': 0.39261169880315927,\n",
+       " 'AdjustedRandIndex': 0.12325051840957109,\n",
+       " 'Adjusted_mutual_information_score': 0.39039800608132064}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "clusterer = KMeans(n_clusters=20, random_state=0, max_iter=5000, n_init=50).fit(svdFeat5)\n",
     "clustLabs = clusterer.labels_\n",
@@ -2350,7 +2458,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56d78934",
+   "id": "57bda48a",
    "metadata": {},
    "outputs": [],
    "source": []
