--- a/Project_2_Image_Data.ipynb
+++ b/Project_2_Image_Data.ipynb
@@ -760,11 +760,38 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "#need to know the top of this for Q25\n",
+        "for k, v in sorted( ((v,k) for k,v in scores.items()), reverse=True):\n",
+        "  print(k, v)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "d2h_DGYvQYwJ",
+        "outputId": "76c2f312-85f7-4e24-e54f-d21741a157ea"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 a\n",
+            "4 c\n",
+            "2 b\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "d2h_DGYvQYwJ"
+        "id": "MSA8L-QvAF-h"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     }
   ],
