--- a/Project_2_Image_Data.ipynb
+++ b/Project_2_Image_Data.ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "code",
       "source": [
-        "!pip install umap-learn\n",
-        "!pip install hdbscan"
+        "# !pip install umap-learn\n",
+        "# !pip install hdbscan"
       ],
       "metadata": {
         "colab": {
